# energy_monitor

./: .gitignore  LICENSE.txt  README.md  add_root_to_path.sh  c12-cost-hehe.txt  clear_logs.sh  config.py  constants.py  dockerfile.carb  dockerfile.pipe  dockerfile.prod  performance_check.ipynb  pyproject.toml  requirements.txt  schema.sql  setup.py
.obsidian/: workspace.json
dashboard/: Dockerfile  dashboard_script.py  explore.ipynb  requirements.txt
email_service/: email_lambda.py  hack.ipynb  webhooks.py
energy_monitor.egg-info/: PKG-INFO  SOURCES.txt
infastructure/: Dockerfile.dashboard
infrastructure/: Dockerfile.dashboard  Dockerfile.email  Dockerfile.extract_carbon  Dockerfile.extract_many  Dockerfile.pipeline  Dockerfile.transform_load  Dockerfile.webhooks  build_and_push.sh  main.tf  old.transform_load  schema.sql
pipeline/: common.py  constants.py  dockerfile  extract.py  extract_carbon  extract_carbon.py  extract_demand.py  extract_generation.py  extract_piechart.py  extract_price.py  extract_production.py  extract_to_s3.py  load.py  main.tf  old_config.py  raw_carbon_data.feather 2024-08-14 08:03:47+00:00  raw_cost_data.feather 2024-08-14 08:03:47+00:00  raw_demand_data.feather 2024-08-14 08:03:45+00:00  raw_production_data.feather 2024-08-14 08:03:44+00:00  terraform.tfstate  terraform.tfstate.backup  to.csv  transform.py
tests/: common_test.py  conftest.py  extract_carbon_test.py  extract_demand_test.py  extract_generation_test.py  extract_price_test.py  test_extract_carbon.py  test_extract_demand.py  test_extract_generation.py  (+2 more)
(+25 files in other folders)
