# Exists to run workflows


[tool.poetry]
name = "energy_monitor"
version = "0.1.0"
description = "Project"
authors = ["Joshua"]

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Add pytest as a dev dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"